--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ main > * {
 }
 
 #interview-header {
-  width: 900px;
+  width: 140%;
   margin-bottom: 4rem;
   text-align: center;
 }
@@ -153,5 +153,45 @@ main > * {
   height: 14px;
   width: 100%;
   margin: 100px auto;
+}
+
+@media (max-width: 1024px) {
+  .nav-wrapper {
+    width: 100vw;
+  }
+
+  #nav-principal {
+    display: none;
+  }
+
+  #interview-header {
+    width: 100%;
+  }
+
+  #interview-header h1 {
+    font-size: 20px !important;
+
+  }
+
+  .subtitle {
+    font-size: 12px;
+  }
+
+  .title {
+    font-size: 16px;
+    line-height: 1.5rem;
+  }
+
+  #interview .dictate {
+    font-size: 14px;
+  }
+
+  #interview .question {
+    font-size: 14px;
+  }
+
+  main {
+    margin: 0 10%;
+  }
 }
 
